--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "socket.io": "0.9.x",
-    "express": "3.x",
+    "express.io": ">= 0.0.0",
     "passport": "0.1.x",
-    "passport-facebook": "",
-    "passport-local": "",
+    "passport-facebook": ">= 0.0.0",
     "blade": "3.x"
   }
 }
