--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "repository": "",
   "dependencies": {
     "less": "1.3.x",
-    "express.io": ">= 0.0.0",
+    "express.io": ">= 1.1.x",
     "passport": "0.1.x",
-    "passport-facebook": ">= 0.0.0",
-    "blade": "3.x"
+    "passport-facebook": ">= 0.1.x",
+    "passport-local": ">= 0.1.x",
+    "blade": "3.x",
+    "redis": "0.8.x",
+    "mysql": "2.0.0-alpha2",
+    "crypto": "*"
   }
 }
