converted to use mongo-db

--- a/config/cinemode.conf
+++ b/config/cinemode.conf
@@ -14,4 +14,12 @@
     , "database" : "cmode_db"
     , "password" : "cmode"
     }
+  ,
+  "mongo" :
+    {
+       "url" : "mongodb://local.host/cmode_db",
+       "options" : {
+         "safe": true
+       }
+    }
 }
