--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "mysql": "2.0.0-alpha2",
     "crypto": "*",
     "hammerjs": "1.0.x",
-    "nodemon": "~0.7.8"
+    "nodemon": "~0.7.8",
+    "mongoose": ">= 3.6.11",
+    "validator": ">= 1.1.3"
   }
 }
